--- a/docs/1.0-migration-guide.md
+++ b/docs/1.0-migration-guide.md
@@ -1,3 +1,21 @@
+# Migrating from Mbed TLS 3.x to TF-PSA-Crypto 1.0
+
+This guide details the steps required to migrate from Mbed TLS version 3.x to
+TF-PSA-Crypto version 1.0 or greater. TF-PSA-Crypto 1 is a new major version of the cryptography part of Mbed TLS. Many interfaces have changed, so users and integrators might need to change their own code in order to make it work with TF-PSA-Crypto.
+
+Here's the list of breaking changes; each entry should help you answer these
+two questions: (1) am I affected? (2) if yes, what's my migration path?
+
+The changes are detailed below. Here is a summary of the main points:
+
+- Mbed TLS has been split between two products: TF-PSA-Crypto for cryptography, and Mbed TLS for X.509 and (D)TLS.
+- CMake is now the only supported build system.
+- The cryptography API is now mostly the PSA API: most legacy cryptography APIs have been removed. Some non-PSA APIs remain for features that PSA does not cover.
+- In the same vein, third-party implementations of cryptographic mechanisms must be provided as PSA drivers: ALT implementations are no longer supported.
+- In the same vein, the random generator configuration has been adapted and simplified.
+- Some obsolete cryptographic mechanisms are no longer supported.
+- The PSA PAKE interface has been updated to follow the final PSA specification.
+
 ## CMake as the only build system
 TF-PSA-Crypto uses CMake exclusively to configure and drive its build process.
 There is no support for the GNU Make and Microsoft Visual Studio project-based build systems as there is in Mbed TLS 3.x.
