Fix broken links
Signed-off-by: Gilles Peskine <Gilles.Peskine@arm.com>

--- a/docs/1.0-migration-guide.md
+++ b/docs/1.0-migration-guide.md
@@ -97,7 +97,7 @@ All cryptography and platform configuration options have been moved from the Mbe
 TF-PSA-Crypto also provides the `scripts/config.py` Python script to adjust your configuration. This script updates `include/psa/crypto_config.h`.
 
 There have been significant changes in the cryptography configuration options:
-- See [psa-transition.md](https://github.com/Mbed-TLS/TF-PSA-Crypto/blob/development/docs/psa-transition.md#compile-time-configuration).
+- See [psa-transition.md](psa-transition.md#compile-time-configuration).
 - See also the following sections:
   - [PSA as the only cryptography API](#psa-as-the-only-cryptography-api) and its sub-section [Impact on the library Configuration](#impact-on-the-library-configuration)
   - [Random number generation configuration](#random-number-generation-configuration)
@@ -231,7 +231,7 @@ The header `mbedtls/check_config.h` is no longer present. Including it from user
 The PSA Crypto API is now the only API for cryptographic primitives.
 
 For general guidance on migrating to the PSA Crypto API, consult the
-[PSA transition guide](../psa-transition.md). Note that most of the suggested migrations also work in the Mbed TLS 3.6 long-time support branch, provided that the library is configured suitably (`MBEDTLS_USE_PSA_CRYPTO` and `MBEDTLS_PSA_CRYPTO_CONFIG` enabled).
+[PSA transition guide](psa-transition.md). Note that most of the suggested migrations also work in the Mbed TLS 3.6 long-time support branch, provided that the library is configured suitably (`MBEDTLS_USE_PSA_CRYPTO` and `MBEDTLS_PSA_CRYPTO_CONFIG` enabled).
 
 ### Impact on application code
 
@@ -253,7 +253,7 @@ See also [function prototype changes](#function-prototype-changes), many of whic
 
 The choice of supported cryptographic mechanisms is now based on `PSA_WANT_xxx` macros instead of legacy configuration macros such as `MBEDTLS_RSA_C`, `MBEDTLS_PKCS1_V15`, etc. This corresponds to the behavior of Mbed TLS 3.x when `MBEDTLS_PSA_CRYPTO_CONFIG` is enabled. In effect, `MBEDTLS_PSA_CRYPTO_CONFIG` is now always enabled.
 
-For information on which configuration macros are affected and their new PSA equivalent, consult the [PSA transition guide](../psa-transition.md).
+For information on which configuration macros are affected and their new PSA equivalent, consult the [PSA transition guide](psa-transition.md).
 
 See also the section [“Random number generation configuration”](#random-number-generation-configuration).
 
@@ -261,7 +261,7 @@ See also the section [“Random number generation configuration”](#random-numb
 
 All modules that are specific to a particular cryptographic mechanism have been removed from the API. There are a few exceptions, for some mechanisms that are not yet present in the PSA API: `mbedtls/lms.h` and `mbedtls/nist_kw.h` remain part of the API.
 
-The high-level legacy module `mbedtls/cipher.h` has also been removed. The high-level legacy modules `mbedtls/md.h` and `mbedtls/pk.h` remain present with reduced functionality (see “[Changes to MD and PK](#changes-to-md-and-pk)”). TF-PSA-Crypto also retains non-PSA interfaces for data formats, platform support and miscellaneous utility functions.
+The high-level legacy module `mbedtls/cipher.h` has also been removed. The high-level legacy modules `mbedtls/md.h` and `mbedtls/pk.h` remain present with reduced functionality (see “[Reduced `md.h`](#reduced-mdh)” and “[PK module](#pk-module)”). TF-PSA-Crypto also retains non-PSA interfaces for data formats, platform support and miscellaneous utility functions.
 
 In full detail, the following header files, and their former content, are no longer available.
 
@@ -308,7 +308,7 @@ mbedtls/sha512.h
 ```
 
 If your application was using functions from these headers, please see
-[`docs/psa-transition.md`](../psa-transition.md) for ways to migrate to
+[`docs/psa-transition.md`](psa-transition.md) for ways to migrate to
 the PSA API instead.
 
 Some of the associated types still need to be visible to the compiler. For example, `mbedtls_aes_context` is used to define `psa_cipher_operation_t`. These types are still available when building application code, but we recommend that you no longer use them directly. The structure, the semantics and even the existence of these types may change without notice.
