--- a/docs/1.0-migration-guide.md
+++ b/docs/1.0-migration-guide.md
@@ -186,7 +186,7 @@ If you build or distribute TF-PSA-Crypto:
 
 ### Platform Integrators
 If you integrate TF-PSA-Crypto with a platform or hardware drivers:
-- Platform-specific configuration are now handled in `include/psa/crypto_config.h`.
+- Platform-specific configuration options are now handled in `include/psa/crypto_config.h`.
 - Review [File and directory relocations](#file-and-directory-relocations) for the location of platform components in TF-PSA-Crypto.
 
 ## Compile-time configuration
