--- a/docs/1.0-migration-guide.md
+++ b/docs/1.0-migration-guide.md
@@ -956,16 +956,16 @@ Before:
 
 ```
 status = psa_pake_setup(&operation, &cipher_suite);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 status = psa_pake_set_password_key(&operation, key);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 ```
 
 Now:
 
 ```
 status = psa_pake_setup(&operation, key, &cipher_suite);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 ```
 
 ### Move the hash algorithm parameter into the algorithm identifier
@@ -1000,28 +1000,28 @@ The function `psa_pake_get_implicit_key()`, which injects the shared secret into
 Before:
 
 ```
-// ommited: set up pake_op and do the PAKE key exchange
+// omitted: set up pake_op and do the PAKE key exchange
 
 psa_algorithm_t alg = PSA_ALG_TLS12_ECJPAKE_TO_PMS; // for example
 psa_key_derivation_operation_t derivation = PSA_KEY_DERIVATION_OPERATION_INIT;
 status = psa_key_derivation_setup(&derivation, alg);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 
 status = psa_pake_get_implicit_key(&pake_op, &derivation);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 
-// ommited: finish key derivation (output/verify, then abort)
+// omitted: finish key derivation (output/verify, then abort)
 ```
 
 Now:
 
 ```
-// ommited: set up pake_op and do the PAKE key exchange
+// omitted: set up pake_op and do the PAKE key exchange
 
 psa_algorithm_t alg = PSA_ALG_TLS12_ECJPAKE_TO_PMS; // for example
 psa_key_derivation_operation_t derivation = PSA_KEY_DERIVATION_OPERATION_INIT;
 status = psa_key_derivation_setup(&derivation, alg);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 
 psa_key_id_t shared_key_id = (psa_key_id_t) 0;
 psa_key_attributes_t shared_key_attributes = PSA_KEY_ATTRIBUTES_INIT;
@@ -1032,15 +1032,15 @@ psa_set_key_type(&shared_key_attributes, PSA_KEY_TYPE_DERIVE);
 status = psa_pake_get_shared_key(&pake_op,
                                  &shared_key_attributes,
                                  &shared_key_id);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 psa_reset_key_attributes(&shared_key_attributes);
 
 status = psa_key_derivation_input_key(&derivation_op,
                                       PSA_KEY_DERIVATION_INPUT_SECRET,
                                       shared_key_id);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 
-// ommited: finish key derivation (output/verify, then abort)
+// omitted: finish key derivation (output/verify, then abort)
 
 psa_destroy_key(shared_key_id); // after key derivation is complete
 ```
@@ -1062,7 +1062,7 @@ psa_set_key_type(&shared_key_attributes, PSA_KEY_TYPE_HMAC);
 status = psa_pake_get_shared_key(&pake_op,
                                  &shared_key_attributes,
                                  &shared_key_id);
-if (status != PSA_SUCCESS) // error handling ommited for brevity
+if (status != PSA_SUCCESS) // error handling omitted for brevity
 ```
 
 See [the specification](https://arm-software.github.io/psa-api/crypto/1.3/api/ops/pake.html#c.psa_pake_get_shared_key) for details. Note that the J-PAKE shared secret is not uniformly pseudorandom, so it can only be used for key derivation and HMAC.
