Mention version association between TF-PSA-Crypto 1.x and Mbed TLS 4.x
Signed-off-by: Gilles Peskine <Gilles.Peskine@arm.com>

--- a/docs/1.0-migration-guide.md
+++ b/docs/1.0-migration-guide.md
@@ -1,7 +1,7 @@
 # Migrating from Mbed TLS 3.x to TF-PSA-Crypto 1.0
 
 This guide details the steps required to migrate from Mbed TLS version 3.x to
-TF-PSA-Crypto version 1.0 or greater. TF-PSA-Crypto 1 is a new major version of the cryptography part of Mbed TLS. Many interfaces have changed, so users and integrators might need to change their own code in order to make it work with TF-PSA-Crypto.
+TF-PSA-Crypto version 1.0 or greater. TF-PSA-Crypto 1.0 introduces a new major version of the cryptography part of Mbed TLS, going together with Mbed TLS 4.0. Many interfaces have changed, so users and integrators might need to change their own code in order to make it work with TF-PSA-Crypto.
 
 Here's the list of breaking changes; each entry should help you answer these
 two questions: (1) am I affected? (2) if yes, what's my migration path?
